Newcomponentdatatable/force-app/main/default/objects/Account/fields/Meeting_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Fixed__c</fullName>
    <label>Total Meetings Fixed</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>