Newcomponentdatatable/force-app/main/default/objects/Account/fields/Meeting_Held__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Held__c</fullName>
    <label>Total Meetings Held</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>