Newcomponentdatatable/force-app/main/default/objects/Account/fields/Meeting_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Pipeline__c</fullName>
    <label>Total Meetings in Pipeline</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>