Newcomponentdatatable/force-app/main/default/objects/Account/fields/Meeting_Pipeline_Date1__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Pipeline_Date1__c</fullName>
    <label>Meeting Pipeline Date1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>