Newcomponentdatatable/force-app/main/default/objects/Account/fields/QAL_Date__c.field-meta.xml
<CustomField>
    <fullName>QAL_Date__c</fullName>
    <label>Total QALs</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>