Newcomponentdatatable/force-app/main/default/objects/Account/fields/QAL_Followup__c.field-meta.xml
<CustomField>
    <fullName>QAL_Followup__c</fullName>
    <label>Total QAL Followups</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>