Newcomponentdatatable/force-app/main/default/objects/Account/fields/SAL_Date__c.field-meta.xml
<CustomField>
    <fullName>SAL_Date__c</fullName>
    <label>Total SALs</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>