Newcomponentdatatable/force-app/main/default/objects/Account/fields/SAL_Followup__c.field-meta.xml
<CustomField>
    <fullName>SAL_Followup__c</fullName>
    <label>Total SAL Followups</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>