Newcomponentdatatable/force-app/main/default/objects/Account/fields/Total_Opportunities_Followups__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunities_Followups__c</fullName>
    <label>Total Opportunities Followups</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>